summative.moria.Moria.scala.error
Erreur de compilation :
Moria:8: error: not found: value prendBiscuits
  prendBiscuits();
  ^Moria:9: error: not found: value returne
  returne();
  ^Moria:14: error: not found: value poseBiscuits
  poseBiscuits();
  ^